vendor order changes(available product list fetch url changed| units_in_stock inc/dec functionality| api for getting vendor own   product that they have stocked )
