# app/Models/Purchase/Order.php
@@ -59,6 +59,13 @@ class Order extends Model
             $balance_after = $earned_points = $order->price * LoyalityPoint::LOYALITY_POINTS; #FIRST TIME DEFAULT
 
             if ($order->status == OrderStatusEnum::PENDING) {
+                foreach ($order->orderItems as $order_item) {
+                    $order->assignedVendor
+                        ->vendor
+                        ->vendorProductPrices()
+                        ->where('product_variation_id', $order_item['item_variant_id'])
+                        ->increment('units_in_stock', $order_item['quantity']);
+                }
                 $order->loyalityPoint()->delete();
             }elseif ($order->status == OrderStatusEnum::DELIVERED) {
                 if ($order->loyalityPoint()->doesntExist()) {                    
@@ -71,6 +78,13 @@ class Order extends Model
                         $latest_approved_loyality_points,
                         $balance_after,
                     ]); */
+                    foreach ($order->orderItems as $order_item) {                        
+                        $order->assignedVendor
+                            ->vendor
+                            ->vendorProductPrices()
+                            ->where('product_variation_id',$order_item['item_variant_id'])
+                            ->decrement('units_in_stock', $order_item['quantity']);
+                    }
                     $order->loyalityPoint()->create([
                         'user_id' => $order->user_id,
                         'points' => $earned_points,
